--- a/src/components/CommonComponent/Navbar/navbar.scss
+++ b/src/components/CommonComponent/Navbar/navbar.scss
@@ -3,6 +3,20 @@
 
 @media only screen and (min-width: 769px) {
 
+  .desktop_hide{
+    display: none;
+  }
+
+
+  .hammMenu_hide{
+    text-align: center;
+
+    svg {
+      display: none;
+    }
+  }
+
+
   .navbar-bottom-shadow {
     padding-bottom: 10px;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.08);
@@ -47,6 +61,7 @@
     .logo {
       width: 10%;
       display: block;
+      margin: auto;
       img {
         width: 100%;
       }
