--- a/src/components/CommonComponent/Navbar/navbar_mobile.scss
+++ b/src/components/CommonComponent/Navbar/navbar_mobile.scss
@@ -1,12 +1,15 @@
 @media only screen and (max-width: 768px) {
 
+  .mobileHide{
+    display: none !important;
+  }
 
   .navbar{
     padding-bottom: 10px;
     padding-top: 10px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
     position: relative;
-    z-index: 2;
+    z-index: 10;
     background-color: white;
   }
 
@@ -60,5 +63,202 @@
 
   }
 
+    .navbar-bottom-shadow {
+      padding-bottom: 10px;
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.08);
+      position: relative;
+      z-index: 2;
+    }
 
-}
+
+
+    .top-links {
+
+      margin-left: auto;
+      margin-top: -4px;
+
+      a {
+        margin-right: 30px;
+        color: #404040;
+        font-size: 11px;
+        font-weight: 600;
+      }
+      a:last-child {
+        margin-right: 0 !important;
+      }
+
+    }
+
+
+    .search-div {
+      margin-left: auto;
+      margin-right: 30px;
+
+      div {
+        position: relative;
+
+        svg {
+          width: 26px;
+          height: auto;
+        }
+      }
+
+    }
+
+    .account-bag-div {
+
+      a {
+        display: inline-block;
+
+        svg {
+          width: 20px;
+          height: auto;
+
+        }
+
+      }
+
+      a:first-child {
+        margin-right: 30px;
+      }
+
+    }
+
+    .category-list-flex {
+      flex-direction: column;
+      align-items: flex-start;
+      height: 360px;
+    }
+
+    .onHover-categories-div {
+
+      position: absolute;
+      width: 80%;
+      left: 10%;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+      top: 70px;
+      padding: 20px 50px 30px 50px;
+      box-sizing: border-box;
+      background-color: white;
+    }
+
+    .category-links {
+
+      list-style: none;
+      li {
+        margin-bottom: 5px;
+      }
+      li:last-child {
+        margin-bottom: 15px;
+      }
+
+    }
+
+
+    .category-image-men {
+      width: 70%;
+      display: flex;
+      margin-left: auto;
+
+      div {
+        margin-left: auto;
+        width: 27%;
+
+        img {
+          width: 100%;
+        }
+      }
+    }
+
+    .category-image-women {
+      width: 30%;
+      margin-left: auto;
+
+      div {
+        margin-left: auto;
+        width: 100%;
+
+        img {
+          width: 100%;
+        }
+      }
+
+      div:first-child {
+        margin-bottom: 20px;
+
+      }
+
+      p {
+        display: none;
+      }
+    }
+
+
+    .ham-menu-div{
+      margin-right: 20px;
+      padding: 5px 5px 5px 0;
+
+      img,svg{
+        width: 26px;
+      }
+    }
+
+
+
+    .left-side-bar-wrapper{
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 4;
+      height: 100%;
+      width: 100%;
+      pointer-events: none;
+    }
+
+    .pointer-auto{
+      pointer-events: auto;
+    }
+
+
+    .left-side-bar-75{
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 75%;
+      height: 100vh;
+      overflow-y: auto;
+      background-color: white;
+      box-shadow: 3px 0 8px 1px rgba(0,0,0,.4);
+      transform: translateX(-102%);
+      transition: transform .5s;
+      will-change: transform;
+
+    }
+
+    .showSideBar{
+      transform: translateX(0%);
+    }
+
+
+    .side-bar-background{
+      position: absolute;
+      height: 100%;
+      background: rgba(0,0,0,.6);
+      opacity: 0;
+      will-change: opacity;
+      transition: opacity .2s;
+      pointer-events: none;
+      width: 100%;
+    }
+
+    .opacity-1{
+      pointer-events: auto;
+      opacity: 1;
+
+    }
+
+
+  }
+
+
+
